name:                hammer
version:             0.1
synopsis:            Reflex hammer
description:         Reflex hammer
homepage:            https://github.com/mightybyte/hammer
license:             GPL-3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardsley
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Reflex.Hammer

  -- other-modules:       
  build-depends:
    base               >= 4.8 && < 4.9,
    data-default-class >= 0.0 && < 0.1,
    reflex             >= 0.3 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/mightybyte/hammer

