name:                hammer
version:             0.1
synopsis:            Reflex hammer
description:         Reflex hammer
homepage:            https://github.com/mightybyte/hammer
license:             GPL-3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardsley
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Reflex.Hammer
    Reflex.Hammer.TH

  -- other-modules:       
  build-depends:
    base               >= 4.7 && < 4.9,
    data-default       >= 0.5 && < 0.6,
    data-default-class >= 0.0 && < 0.1,
    lens               >= 4.8 && < 4.14,
    reflex             >= 0.3 && < 0.4,
    template-haskell   >= 2.9 && < 3.0
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/mightybyte/hammer

